--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "version": "1.0.0",
     "main": "pathToMain",
     "scripts": {
-        "start-dev": "postcss public/clientLibraries/tailwindSettings.css -o public/clientLibraries/tailwind.css; ENVIRONMENT=development nodemon app.js"
+        "start-dev": "postcss public/clientLibraries/tailwindSettings.css -o public/clientLibraries/tailwind.css; ENVIRONMENT=development nodemon app.js",
+        "start":"PORT=80 node app.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
