--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
     "version": "1.0.0",
     "main": "pathToMain",
     "scripts": {
-        "start-dev": "postcss public/clientLibraries/tailwindSettings.css -o public/clientLibraries/tailwind.css; ENVIRONMENT=development nodemon app.js",
-        "start":"node app.js"
+        "start-dev": "postcss public/clientLibraries/tailwindSettings.css -o public/clientLibraries/tailwind.css;PORT=8080 nodemon --ext js,html app.js",
+        "start": "node app.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
-        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "formdata": "^0.10.4",
         "matter-js": "^0.16.1",
-        "pug": "^3.0.2"
+        "nodemailer": "^6.6.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.5",
