working on toosec videos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+    "HttpPort":8080,
     "MailSettings":{
         "name":"Deji: Website",
         "subject":"Someone's Trying To Contact You!",
@@ -22,5 +23,8 @@
             "RefreshEndpoint":"https://login.live.com/oauth20_token.srf",
             "RedirectUri":"http://deji.dk/projects/noted/auth/success"
         }
+    },
+    "Database":{
+        "ConnectionString":"mongodb://127.0.0.1:27017"
     }
 }
