--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "express": "^4.17.1",
         "formdata": "^0.10.4",
         "matter-js": "^0.16.1",
-        "nodemailer": "^6.6.0"
+        "mongodb": "^3.6.7",
+        "multer": "^1.4.2",
+        "nodemailer": "^6.6.0",
+        "socket.io": "^4.1.2",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.5",
